Picture-in-Picture: handle state changes to/from fullscreen.

Bug: 850479
Change-Id: Id1e953e3416f1f971f981bc5e5247fa40233538e
Reviewed-on: https://chromium-review.googlesource.com/1114256
Reviewed-by: apacible <apacible@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570273}
Former-commit-id: 51c9217bc9495769a0539c27a41cc6e5f7ca429b